--- a/notebooks/ExplorationBook-Copy1.ipynb
+++ b/notebooks/ExplorationBook-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "abd838c3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "3f0405c2",
    "metadata": {},
    "outputs": [],
@@ -25,117 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "b9161df4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>run_id</th>\n",
-       "      <th>run_config</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>model</th>\n",
-       "      <th>execution_mode</th>\n",
-       "      <th>eval_metric</th>\n",
-       "      <th>best_params</th>\n",
-       "      <th>output_metrics</th>\n",
-       "      <th>saved_model_path</th>\n",
-       "      <th>run_time</th>\n",
-       "      <th>...</th>\n",
-       "      <th>debug_ytrue</th>\n",
-       "      <th>f1</th>\n",
-       "      <th>mse</th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>recall</th>\n",
-       "      <th>precision</th>\n",
-       "      <th>auc</th>\n",
-       "      <th>area_under_pr</th>\n",
-       "      <th>r2_score</th>\n",
-       "      <th>rmse</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>202308-0818-3052-6dc614ce-9ad0-4768-9622-d93e8...</td>\n",
-       "      <td>{'dataset': 'titanic', 'model': 'xgb', 'best_p...</td>\n",
-       "      <td>titanic</td>\n",
-       "      <td>xgb</td>\n",
-       "      <td>hyperopt</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'alpha': 1.2287812618695404, 'colsample_bytre...</td>\n",
-       "      <td>{'recall': 0.6744186046511628, 'precision': 0....</td>\n",
-       "      <td>./output/modelsaves/titanic/xgb/202308-0818-30...</td>\n",
-       "      <td>4.541961</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.738854</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.816143</td>\n",
-       "      <td>0.674419</td>\n",
-       "      <td>0.816901</td>\n",
-       "      <td>0.870523</td>\n",
-       "      <td>0.676494</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              run_id  \\\n",
-       "0  202308-0818-3052-6dc614ce-9ad0-4768-9622-d93e8...   \n",
-       "\n",
-       "                                          run_config  dataset model  \\\n",
-       "0  {'dataset': 'titanic', 'model': 'xgb', 'best_p...  titanic   xgb   \n",
-       "\n",
-       "  execution_mode eval_metric  \\\n",
-       "0       hyperopt    accuracy   \n",
-       "\n",
-       "                                         best_params  \\\n",
-       "0  {'alpha': 1.2287812618695404, 'colsample_bytre...   \n",
-       "\n",
-       "                                      output_metrics  \\\n",
-       "0  {'recall': 0.6744186046511628, 'precision': 0....   \n",
-       "\n",
-       "                                    saved_model_path  run_time  ...  \\\n",
-       "0  ./output/modelsaves/titanic/xgb/202308-0818-30...  4.541961  ...   \n",
-       "\n",
-       "                      debug_ytrue        f1   mse  accuracy    recall  \\\n",
-       "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.738854  None  0.816143  0.674419   \n",
-       "\n",
-       "   precision       auc  area_under_pr  r2_score  rmse  \n",
-       "0   0.816901  0.870523       0.676494      None  None  \n",
-       "\n",
-       "[1 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List of metric names\n",
     "metric_names = [\"f1\",\"mse\",\"accuracy\",\"recall\",\"precision\", \"auc\",\"area_under_pr\", \"r2_score\", \"rmse\"]\n",
@@ -145,15 +38,12 @@
     "dataset['output_metrics'] = dataset['output_metrics'].apply(ast.literal_eval)\n",
     "# Create columns based on metric names\n",
     "for metric in metric_names:\n",
-    "    dataset[metric] = dataset['output_metrics'].apply(lambda x: x.get(metric) if isinstance(x, dict) else np.nan)\n",
-    "\n",
-    "\n",
-    "dataset.head(1)"
+    "    dataset[metric] = dataset['output_metrics'].apply(lambda x: x.get(metric) if isinstance(x, dict) else np.nan)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "9e4f9922",
    "metadata": {},
    "outputs": [
@@ -198,156 +88,80 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>tabnet</td>\n",
+       "      <th>0</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>xgb</td>\n",
        "      <td>hyperopt</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'Adam_lr': 0.001, 'Adam_weight_decay': 0.0001...</td>\n",
-       "      <td>{'recall': 0.5697674418604651, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.518519</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'alpha': 0.7605962861221638, 'colsample_bytre...</td>\n",
+       "      <td>{'mse': 0.22065056597371746, 'rmse': 0.4697345...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.591928</td>\n",
-       "      <td>0.569767</td>\n",
-       "      <td>0.475728</td>\n",
-       "      <td>0.580631</td>\n",
-       "      <td>0.436974</td>\n",
+       "      <td>0.220651</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>tabnet</td>\n",
-       "      <td>hyperopt</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'Adam_weight_decay': 0.0008344870704054452, '...</td>\n",
-       "      <td>{'recall': 0.5813953488372093, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.606061</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.708520</td>\n",
-       "      <td>0.581395</td>\n",
-       "      <td>0.632911</td>\n",
-       "      <td>0.744865</td>\n",
-       "      <td>0.529407</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>mlp</td>\n",
-       "      <td>cv</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'validation_fraction': 0.2, 'solver': 'adam',...</td>\n",
-       "      <td>{'recall': 0.7441860465116279, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.731429</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.789238</td>\n",
-       "      <td>0.744186</td>\n",
-       "      <td>0.719101</td>\n",
-       "      <td>0.846885</td>\n",
-       "      <td>0.633800</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>0.834433</td>\n",
+       "      <td>0.469735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>titanic</td>\n",
+       "      <td>housing</td>\n",
        "      <td>mlp</td>\n",
        "      <td>cv</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'validation_fraction': 0.2, 'solver': 'adam',...</td>\n",
-       "      <td>{'recall': 0.6744186046511628, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.716049</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'validation_fraction': 0.15, 'solver': 'lbfgs...</td>\n",
+       "      <td>{'mse': 0.2547037413374874, 'rmse': 0.50468182...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.793722</td>\n",
-       "      <td>0.674419</td>\n",
-       "      <td>0.763158</td>\n",
-       "      <td>0.864539</td>\n",
-       "      <td>0.640248</td>\n",
+       "      <td>0.254704</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.808881</td>\n",
+       "      <td>0.504682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>titanic</td>\n",
+       "      <td>housing</td>\n",
        "      <td>s1dcnn</td>\n",
        "      <td>hyperopt</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'batch_size': 1538, 'early_stopping_patience'...</td>\n",
-       "      <td>{'recall': 0.627906976744186, 'precision': 0.8...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.715232</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'batch_size': 930, 'early_stopping_patience':...</td>\n",
+       "      <td>{'mse': 0.30651763152996203, 'rmse': 0.5536403...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.807175</td>\n",
-       "      <td>0.627907</td>\n",
-       "      <td>0.830769</td>\n",
-       "      <td>0.820998</td>\n",
-       "      <td>0.665144</td>\n",
+       "      <td>0.306518</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.770002</td>\n",
+       "      <td>0.553640</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>s1dcnn</td>\n",
+       "      <th>3</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>tabnet</td>\n",
        "      <td>hyperopt</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'batch_size': 112, 'early_stopping_patience':...</td>\n",
-       "      <td>{'recall': 0.6046511627906976, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.712329</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'Adam_weight_decay': 0.00033637394168674177, ...</td>\n",
+       "      <td>{'mse': 0.9491384590261115, 'rmse': 0.97423737...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.811659</td>\n",
-       "      <td>0.604651</td>\n",
-       "      <td>0.866667</td>\n",
-       "      <td>0.840392</td>\n",
-       "      <td>0.676497</td>\n",
+       "      <td>0.949138</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>xgb</td>\n",
-       "      <td>hyperopt</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'alpha': 1.2287812618695404, 'colsample_bytre...</td>\n",
-       "      <td>{'recall': 0.6744186046511628, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.738854</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.816143</td>\n",
-       "      <td>0.674419</td>\n",
-       "      <td>0.816901</td>\n",
-       "      <td>0.870523</td>\n",
-       "      <td>0.676494</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>titanic</td>\n",
-       "      <td>xgb</td>\n",
-       "      <td>hyperopt</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'alpha': 2.6726856899356086, 'colsample_bytre...</td>\n",
-       "      <td>{'recall': 0.7325581395348837, 'precision': 0....</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.773006</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.834081</td>\n",
-       "      <td>0.732558</td>\n",
-       "      <td>0.818182</td>\n",
-       "      <td>0.867637</td>\n",
-       "      <td>0.702505</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>0.287807</td>\n",
+       "      <td>0.974237</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -355,64 +169,44 @@
       ],
       "text/plain": [
        "   dataset   model execution_mode eval_metric  \\\n",
-       "3  titanic  tabnet       hyperopt    accuracy   \n",
-       "7  titanic  tabnet       hyperopt    accuracy   \n",
-       "5  titanic     mlp             cv    accuracy   \n",
-       "1  titanic     mlp             cv    accuracy   \n",
-       "2  titanic  s1dcnn       hyperopt    accuracy   \n",
-       "6  titanic  s1dcnn       hyperopt    accuracy   \n",
-       "0  titanic     xgb       hyperopt    accuracy   \n",
-       "4  titanic     xgb       hyperopt    accuracy   \n",
+       "0  housing     xgb       hyperopt         mse   \n",
+       "1  housing     mlp             cv         mse   \n",
+       "2  housing  s1dcnn       hyperopt         mse   \n",
+       "3  housing  tabnet       hyperopt         mse   \n",
        "\n",
        "                                         best_params  \\\n",
-       "3  {'Adam_lr': 0.001, 'Adam_weight_decay': 0.0001...   \n",
-       "7  {'Adam_weight_decay': 0.0008344870704054452, '...   \n",
-       "5  {'validation_fraction': 0.2, 'solver': 'adam',...   \n",
-       "1  {'validation_fraction': 0.2, 'solver': 'adam',...   \n",
-       "2  {'batch_size': 1538, 'early_stopping_patience'...   \n",
-       "6  {'batch_size': 112, 'early_stopping_patience':...   \n",
-       "0  {'alpha': 1.2287812618695404, 'colsample_bytre...   \n",
-       "4  {'alpha': 2.6726856899356086, 'colsample_bytre...   \n",
+       "0  {'alpha': 0.7605962861221638, 'colsample_bytre...   \n",
+       "1  {'validation_fraction': 0.15, 'solver': 'lbfgs...   \n",
+       "2  {'batch_size': 930, 'early_stopping_patience':...   \n",
+       "3  {'Adam_weight_decay': 0.00033637394168674177, ...   \n",
        "\n",
        "                                      output_metrics  \\\n",
-       "3  {'recall': 0.5697674418604651, 'precision': 0....   \n",
-       "7  {'recall': 0.5813953488372093, 'precision': 0....   \n",
-       "5  {'recall': 0.7441860465116279, 'precision': 0....   \n",
-       "1  {'recall': 0.6744186046511628, 'precision': 0....   \n",
-       "2  {'recall': 0.627906976744186, 'precision': 0.8...   \n",
-       "6  {'recall': 0.6046511627906976, 'precision': 0....   \n",
-       "0  {'recall': 0.6744186046511628, 'precision': 0....   \n",
-       "4  {'recall': 0.7325581395348837, 'precision': 0....   \n",
+       "0  {'mse': 0.22065056597371746, 'rmse': 0.4697345...   \n",
+       "1  {'mse': 0.2547037413374874, 'rmse': 0.50468182...   \n",
+       "2  {'mse': 0.30651763152996203, 'rmse': 0.5536403...   \n",
+       "3  {'mse': 0.9491384590261115, 'rmse': 0.97423737...   \n",
        "\n",
-       "                      debug_ytrue        f1   mse  accuracy    recall  \\\n",
-       "3  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.518519  None  0.591928  0.569767   \n",
-       "7  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.606061  None  0.708520  0.581395   \n",
-       "5  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.731429  None  0.789238  0.744186   \n",
-       "1  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.716049  None  0.793722  0.674419   \n",
-       "2  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.715232  None  0.807175  0.627907   \n",
-       "6  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.712329  None  0.811659  0.604651   \n",
-       "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.738854  None  0.816143  0.674419   \n",
-       "4  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.773006  None  0.834081  0.732558   \n",
+       "                                         debug_ytrue    f1       mse accuracy  \\\n",
+       "0  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.220651     None   \n",
+       "1  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.254704     None   \n",
+       "2  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.306518     None   \n",
+       "3  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.949138     None   \n",
        "\n",
-       "   precision       auc  area_under_pr r2_score  rmse  \n",
-       "3   0.475728  0.580631       0.436974     None  None  \n",
-       "7   0.632911  0.744865       0.529407     None  None  \n",
-       "5   0.719101  0.846885       0.633800     None  None  \n",
-       "1   0.763158  0.864539       0.640248     None  None  \n",
-       "2   0.830769  0.820998       0.665144     None  None  \n",
-       "6   0.866667  0.840392       0.676497     None  None  \n",
-       "0   0.816901  0.870523       0.676494     None  None  \n",
-       "4   0.818182  0.867637       0.702505     None  None  "
+       "  recall precision   auc area_under_pr  r2_score      rmse  \n",
+       "0   None      None  None          None  0.834433  0.469735  \n",
+       "1   None      None  None          None  0.808881  0.504682  \n",
+       "2   None      None  None          None  0.770002  0.553640  \n",
+       "3   None      None  None          None  0.287807  0.974237  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Specify the metric you want to maximize\n",
-    "metric_to_maximize = 'accuracy'\n",
+    "metric_to_maximize = 'mse'\n",
     "tomax = {\"f1\": True,\n",
     "         \"mse\": False,\n",
     "         \"accuracy\": True,\n",
