--- a/notebooks/ExplorationBook.ipynb
+++ b/notebooks/ExplorationBook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "abd838c3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "3f0405c2",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "b9161df4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "9e4f9922",
    "metadata": {},
    "outputs": [
@@ -70,6 +70,7 @@
        "      <th></th>\n",
        "      <th>dataset</th>\n",
        "      <th>model</th>\n",
+       "      <th>run_time</th>\n",
        "      <th>eval_metric</th>\n",
        "      <th>best_params</th>\n",
        "      <th>output_metrics</th>\n",
@@ -86,17 +87,119 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>xgb</td>\n",
+       "      <td>11.338877</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'alpha': 0.7605962861221638, 'colsample_bytre...</td>\n",
+       "      <td>{'mse': 0.2127647380723268, 'rmse': 0.46126428...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.212765</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.840350</td>\n",
+       "      <td>0.461264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>mlp</td>\n",
+       "      <td>957.775981</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'validation_fraction': 0.15, 'solver': 'lbfgs...</td>\n",
+       "      <td>{'mse': 0.2911525213286936, 'rmse': 0.53958550...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.291153</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.781532</td>\n",
+       "      <td>0.539586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>s1dcnn</td>\n",
+       "      <td>885.240154</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'batch_size': 930, 'early_stopping_patience':...</td>\n",
+       "      <td>{'mse': 0.30259276899484133, 'rmse': 0.5500843...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.302593</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.772947</td>\n",
+       "      <td>0.550084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>tabnet</td>\n",
+       "      <td>1620.804620</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'Adam_weight_decay': 0.00033637394168674177, ...</td>\n",
+       "      <td>{'mse': 0.9491384590261115, 'rmse': 0.97423737...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.949138</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.287807</td>\n",
+       "      <td>0.974237</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [dataset, model, eval_metric, best_params, output_metrics, debug_ytrue, f1, mse, accuracy, recall, precision, auc, area_under_pr, r2_score, rmse]\n",
-       "Index: []"
+       "   dataset   model     run_time eval_metric  \\\n",
+       "0  housing     xgb    11.338877         mse   \n",
+       "1  housing     mlp   957.775981         mse   \n",
+       "2  housing  s1dcnn   885.240154         mse   \n",
+       "3  housing  tabnet  1620.804620         mse   \n",
+       "\n",
+       "                                         best_params  \\\n",
+       "0  {'alpha': 0.7605962861221638, 'colsample_bytre...   \n",
+       "1  {'validation_fraction': 0.15, 'solver': 'lbfgs...   \n",
+       "2  {'batch_size': 930, 'early_stopping_patience':...   \n",
+       "3  {'Adam_weight_decay': 0.00033637394168674177, ...   \n",
+       "\n",
+       "                                      output_metrics  \\\n",
+       "0  {'mse': 0.2127647380723268, 'rmse': 0.46126428...   \n",
+       "1  {'mse': 0.2911525213286936, 'rmse': 0.53958550...   \n",
+       "2  {'mse': 0.30259276899484133, 'rmse': 0.5500843...   \n",
+       "3  {'mse': 0.9491384590261115, 'rmse': 0.97423737...   \n",
+       "\n",
+       "                                         debug_ytrue    f1       mse accuracy  \\\n",
+       "0  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.212765     None   \n",
+       "1  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.291153     None   \n",
+       "2  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.302593     None   \n",
+       "3  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.949138     None   \n",
+       "\n",
+       "  recall precision   auc area_under_pr  r2_score      rmse  \n",
+       "0   None      None  None          None  0.840350  0.461264  \n",
+       "1   None      None  None          None  0.781532  0.539586  \n",
+       "2   None      None  None          None  0.772947  0.550084  \n",
+       "3   None      None  None          None  0.287807  0.974237  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +227,7 @@
     "else:\n",
     "    max_rows = filtered_df.sort_values(metric_to_maximize)\n",
     "    \n",
-    "sel_cols = ['dataset', 'model', \n",
+    "sel_cols = ['dataset', 'model', 'run_time',\n",
     "       'eval_metric', 'best_params', 'output_metrics',\n",
     " 'debug_ytrue', 'f1', 'mse', 'accuracy',\n",
     "       'recall', 'precision', 'auc', 'area_under_pr', 'r2_score', 'rmse']\n",
