--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -157,16 +157,16 @@
     "\n",
     "\n",
     "xgb_large_param_grid ={\n",
-    "            \"outer_params\": {\"hyperopt_evals\": 2},\n",
+    "            \"outer_params\": {\"hyperopt_evals\": 100},\n",
     "            \"n_estimators\": [100,1100],\n",
     "            \"validation_fraction\":[0.2],\n",
     "            \"max_bin\": [128,512],\n",
     "            \"tree_method\": [\"auto\"],\n",
-    "            \"max_depth\": [4, 12],\n",
+    "            \"max_depth\": [4, 10],\n",
     "            \"learning_rate\": [0.1,0.33],\n",
     "            \"subsample\": [0.7, 1.0],\n",
     "            \"colsample_bytree\": [0.7, 1.0],\n",
-    "            \"min_child_weight\": [1,10],\n",
+    "            \"min_child_weight\": [1,50],\n",
     "            \"alpha\": [0.0, 5.0],\n",
     "            \"gamma\": [0.0, 5.0],\n",
     "            \"lambda\": [0.0, 5.0]\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -467,19 +467,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
    "source": [
     "node_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"max_epochs\": 300,\n",
+    "        \"max_epochs\": 3,\n",
     "        \"early_stopping_tolerance\": 1.0e-06,\n",
-    "        \"hyperopt_evals\": 10,\n",
+    "        \"hyperopt_evals\": 2,\n",
     "        \"val_size\": 0.2,\n",
     "        \"auto_lr_find\": False\n",
     "    },\n",
+    "     'num_layers': [1, 2, 3],\n",
+    "    'num_trees': [1024, 2048, 4096],\n",
+    "    'additional_tree_output_dim': [2, 3, 4],\n",
+    "    'depth': [4, 6, 8],\n",
+    "    'choice_function': ['entmax15', 'sparsemax'],\n",
+    "    'bin_function': ['entmoid15', 'sparsemoid'],\n",
+    "    'max_features': [None, 50, 100],\n",
+    "    'input_dropout': [0.0, 0.2, 0.4],\n",
+    "    'initialize_response': ['normal', 'uniform'],\n",
+    "    'initialize_selection_logits': ['uniform', 'normal'],\n",
+    "    'threshold_init_beta': [0.1, 1.0, 10.0],\n",
+    "    'threshold_init_cutoff': [0.5, 0.9, 1.5],\n",
+    "    'cat_embedding_dropout': [0.0, 0.1, 0.2],\n",
+    "    'embed_categorical': [True, False],\n",
+    "    'task': ['regression', 'classification', 'backbone'],\n",
+    "    'head': ['LinearHead', 'MixtureDensityHead'],\n",
+    "    'embedding_dropout': [0.0, 0.1, 0.2],\n",
+    "    'batch_norm_continuous_input': [True, False],\n",
     "    \"learning_rate\": [0.001, 0.0001], \n",
     "    \"early_stopping_patience\": [3,5],\n",
     "    \"batch_size\": [128,256,512,1024],\n",
@@ -491,26 +509,7 @@
     "    },\n",
     "    \n",
     "}\n",
-    "\n",
-    "node_small_param_grid = {\n",
-    "    \"outer_params\": {\n",
-    "        \"max_epochs\": 300,\n",
-    "        \"early_stopping_tolerance\": 1.0e-06,\n",
-    "        \"hyperopt_evals\": 10,\n",
-    "        \"val_size\": 0.2,\n",
-    "        \"auto_lr_find\": False\n",
-    "    },\n",
-    "    \"learning_rate\": [0.001, 0.0001], \n",
-    "    \"early_stopping_patience\": [3,5],\n",
-    "    \"batch_size\": [16,32,64],\n",
-    "    \n",
-    "    \"optimizer_fn\": {\n",
-    "        \"Adam\": {\"weight_decay\": [0.0001,  0.3]}\n",
-    "    },\n",
-    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [4,9]},\n",
-    "    },\n",
-    "    \n",
-    "}"
+    "\n"
    ]
   },
   {
@@ -523,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -539,13 +538,15 @@
     "    \"early_stopping_patience\": [3,5],\n",
     "    \"batch_size\": [128,256,512,1024],\n",
     "    \"learning_rate\": [0.001,0.0001],\n",
+    "    \n",
     "    \"optimizer_fn\": {\n",
     "        \"Adam\": {\"lr\": [0.001, 0.0001], \"weight_decay\": [0.0001,  0.3]}\n",
     "    },\n",
     "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [4,9]},\n",
     "    },\n",
     "    \n",
-    "}"
+    "}\n",
+    "\n"
    ]
   },
   {
@@ -558,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -613,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -643,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "id": "b5faf7a7",
    "metadata": {},
    "outputs": [],
@@ -720,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -748,6 +749,7 @@
     "    generate_model_template(\"housing\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"node\", param_grid = node_large_param_grid.copy()),\n",
     "\n",
     "    generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
@@ -756,12 +758,13 @@
     "    generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\",\"node\", param_grid = node_large_param_grid.copy())\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
