--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 121,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 122,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 123,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 124,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 125,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 126,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 127,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 128,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -467,23 +467,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 129,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
    "source": [
     "node_large_param_grid = {\n",
     "    \"outer_params\": {\n",
-    "        \"max_epochs\": 3,\n",
+    "        \"max_epochs\": 100,\n",
     "        \"early_stopping_tolerance\": 1.0e-06,\n",
-    "        \"hyperopt_evals\": 2,\n",
+    "        \"hyperopt_evals\": 10,\n",
     "        \"val_size\": 0.2,\n",
     "        \"auto_lr_find\": False\n",
     "    },\n",
-    "     'num_layers': [1, 2, 3],\n",
-    "    'num_trees': [1024, 2048, 4096],\n",
+    "    'num_layers': [1,2],\n",
+    "    'num_trees': [1024, 2048],\n",
     "    'additional_tree_output_dim': [2, 3, 4],\n",
-    "    'depth': [4, 6, 8],\n",
+    "    'depth': [4, 5],\n",
     "    'choice_function': ['entmax15', 'sparsemax'],\n",
     "    'bin_function': ['entmoid15', 'sparsemoid'],\n",
     "    'max_features': [None, 50, 100],\n",
@@ -494,22 +494,57 @@
     "    'threshold_init_cutoff': [0.5, 0.9, 1.5],\n",
     "    'cat_embedding_dropout': [0.0, 0.1, 0.2],\n",
     "    'embed_categorical': [True, False],\n",
-    "    'task': ['regression', 'classification', 'backbone'],\n",
-    "    'head': ['LinearHead', 'MixtureDensityHead'],\n",
+    "    'head': ['LinearHead'],\n",
     "    'embedding_dropout': [0.0, 0.1, 0.2],\n",
     "    'batch_norm_continuous_input': [True, False],\n",
     "    \"learning_rate\": [0.001, 0.0001], \n",
     "    \"early_stopping_patience\": [3,5],\n",
-    "    \"batch_size\": [128,256,512,1024],\n",
+    "    \"batch_size\": [512,1024,2048],\n",
     "    \n",
     "    \"optimizer_fn\": {\n",
-    "        \"Adam\": {\"weight_decay\": [0.0001,  0.3]}\n",
+    "        \"Adam\": {\"weight_decay\": [0.0,  0.3]}\n",
     "    },\n",
     "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [4,9]},\n",
     "    },\n",
     "    \n",
     "}\n",
-    "\n"
+    "\n",
+    "node_small_param_grid = {\n",
+    "    \"outer_params\": {\n",
+    "        \"max_epochs\": 100,\n",
+    "        \"early_stopping_tolerance\": 1.0e-06,\n",
+    "        \"hyperopt_evals\": 10,\n",
+    "        \"val_size\": 0.2,\n",
+    "        \"auto_lr_find\": False\n",
+    "    },\n",
+    "    'num_layers': [1,2],\n",
+    "    'num_trees': [1024, 2048],\n",
+    "    'additional_tree_output_dim': [2, 3, 4],\n",
+    "    'depth': [4, 7],\n",
+    "    'choice_function': ['entmax15', 'sparsemax'],\n",
+    "    'bin_function': ['entmoid15', 'sparsemoid'],\n",
+    "    'max_features': [None, 50, 100],\n",
+    "    'input_dropout': [0.0, 0.2, 0.4],\n",
+    "    'initialize_response': ['normal', 'uniform'],\n",
+    "    'initialize_selection_logits': ['uniform', 'normal'],\n",
+    "    'threshold_init_beta': [0.1, 1.0, 10.0],\n",
+    "    'threshold_init_cutoff': [0.5, 0.9, 1.5],\n",
+    "    'cat_embedding_dropout': [0.0, 0.1, 0.2],\n",
+    "    'embed_categorical': [True, False],\n",
+    "    'head': ['LinearHead'],\n",
+    "    'embedding_dropout': [0.0, 0.1, 0.2],\n",
+    "    'batch_norm_continuous_input': [True, False],\n",
+    "    \"learning_rate\": [0.001, 0.0001], \n",
+    "    \"early_stopping_patience\": [5,10],\n",
+    "    \"batch_size\": [8,16,32,64,128],\n",
+    "    \n",
+    "    \"optimizer_fn\": {\n",
+    "        \"Adam\": {\"weight_decay\": [0.0,  0.3]}\n",
+    "    },\n",
+    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [4,9]},\n",
+    "    },\n",
+    "    \n",
+    "}"
    ]
   },
   {
@@ -522,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 130,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -546,7 +581,83 @@
     "    },\n",
     "    \n",
     "}\n",
+    "\n",
+    "catembed_small_param_grid = {\n",
+    "    \"outer_params\": {\n",
+    "        \"max_epochs\": 300,\n",
+    "        \"early_stopping_tolerance\": 1.0e-06,\n",
+    "        \"hyperopt_evals\": 10,\n",
+    "        \"val_size\": 0.2,\n",
+    "        \"auto_lr_find\": False\n",
+    "    },\n",
+    "    \"early_stopping_patience\": [3,5],\n",
+    "    \"batch_size\": [8,16,32,64],\n",
+    "    \"learning_rate\": [0.001,0.0001],\n",
+    "    \n",
+    "    \"optimizer_fn\": {\n",
+    "        \"Adam\": {\"lr\": [0.001, 0.0001], \"weight_decay\": [0.0001,  0.3]}\n",
+    "    },\n",
+    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [4,9]},\n",
+    "    },\n",
+    "    \n",
+    "}\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "781b9dc1",
+   "metadata": {},
+   "source": [
+    "# TabTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f65c1a1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tabtransformer_large_param_grid = {\n",
+    "    \"outer_params\": {\n",
+    "        \"max_epochs\": 300,\n",
+    "        \"early_stopping_tolerance\": 1.0e-06,\n",
+    "        \"hyperopt_evals\": 10,\n",
+    "        \"val_size\": 0.2,\n",
+    "        \"auto_lr_find\": False\n",
+    "    },\n",
+    "    \"early_stopping_patience\": [3,5],\n",
+    "    \"batch_size\": [128,256,512,1024],\n",
+    "    \"learning_rate\": [0.001,0.0001],\n",
+    "    \n",
+    "    \"optimizer_fn\": {\n",
+    "        \"Adam\": {\"lr\": [0.001, 0.0001], \"weight_decay\": [0.0001,  0.3]}\n",
+    "    },\n",
+    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [4,9]},\n",
+    "    },\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "tabtransformer_small_param_grid = {\n",
+    "    \"outer_params\": {\n",
+    "        \"max_epochs\": 300,\n",
+    "        \"early_stopping_tolerance\": 1.0e-06,\n",
+    "        \"hyperopt_evals\": 10,\n",
+    "        \"val_size\": 0.2,\n",
+    "        \"auto_lr_find\": False\n",
+    "    },\n",
+    "    \"early_stopping_patience\": [3,5],\n",
+    "    \"batch_size\": [8,16,32,64],\n",
+    "    \"learning_rate\": [0.001,0.0001],\n",
+    "    \n",
+    "    \"optimizer_fn\": {\n",
+    "        \"Adam\": {\"lr\": [0.001, 0.0001], \"weight_decay\": [0.0001,  0.3]}\n",
+    "    },\n",
+    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [4,9]},\n",
+    "    },\n",
+    "    \n",
+    "}\n"
    ]
   },
   {
@@ -559,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 131,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -601,6 +712,45 @@
     "    'embedding_dropout': [0.1, 0.01, 0.5],\n",
     "    'batch_norm_continuous_input': [True, False],\n",
     "    'learning_rate': [0.001, 0.0001, 0.01],\n",
+    "}\n",
+    "\n",
+    "autoint_small_param_grid = {\n",
+    "      \"outer_params\": {\n",
+    "        \"max_epochs\": 300,\n",
+    "        \"early_stopping_tolerance\": 1.0e-06,\n",
+    "        \"hyperopt_evals\": 10,\n",
+    "        \"val_size\": 0.2,\n",
+    "        \"auto_lr_find\": False\n",
+    "    },\n",
+    "    \"early_stopping_patience\": [3,5],\n",
+    "    \"batch_size\": [8,16,32,64],\n",
+    "    \"optimizer_fn\": {\n",
+    "        \"Adam\": {\"lr\": [0.001, 0.0001], \"weight_decay\": [0.0001,  0.3]}\n",
+    "    },\n",
+    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [4,9]},\n",
+    "    },\n",
+    "    'attn_embed_dim': [32, 16, 64],\n",
+    "    'num_heads': [2, 1, 8],\n",
+    "    'num_attn_blocks': [3, 1, 5],\n",
+    "    'attn_dropouts': [0.01, 0.3],\n",
+    "    'has_residuals': [True, True, False],\n",
+    "    'embedding_dim': [16, 8, 32],\n",
+    "    'embedding_initialization': ['kaiming_uniform', 'kaiming_normal'],\n",
+    "    'embedding_bias': [True, False],\n",
+    "    'share_embedding': [False, True],\n",
+    "    'share_embedding_strategy': ['fraction', 'add'],\n",
+    "    'shared_embedding_fraction': [0.25, 0.1, 0.5],\n",
+    "    'deep_layers': [False, True],\n",
+    "    'layers': ['128-64-32', '64-32', '256-128-64-32'],\n",
+    "    'activation': ['ReLU', 'Tanh', 'LeakyReLU'],\n",
+    "    'use_batch_norm': [False, True],\n",
+    "    'initialization': ['kaiming', 'xavier', 'random'],\n",
+    "    'dropout': [0.01, 0.2, 0.3],\n",
+    "    'attention_pooling': [False, True],\n",
+    "    'head': ['LinearHead', 'MixtureDensityHead'],\n",
+    "    'embedding_dropout': [0.1, 0.01, 0.5],\n",
+    "    'batch_norm_continuous_input': [True, False],\n",
+    "    'learning_rate': [0.001, 0.0001, 0.01],\n",
     "}"
    ]
   },
@@ -614,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 132,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -644,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 133,
    "id": "b5faf7a7",
    "metadata": {},
    "outputs": [],
@@ -721,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 134,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -733,6 +883,11 @@
     "    generate_model_template(\"titanic\", \"tabnet\",param_grid = tabnet_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\", \"gate\", param_grid = gate_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\",\"fttransformer\", param_grid = fttransformer_small_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\", \"categoryembedding\", param_grid = catembed_small_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"gandalf\", param_grid = gandalf_small_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"node\", param_grid = node_small_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"autoint\", param_grid = autoint_small_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"tabtransformer\", param_grid = tabtransformer_small_param_grid.copy()),\n",
     "\n",
     "    generate_model_template(\"iris\",\"xgb\",param_grid = xgb_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\", \"mlp\",  param_grid = mlp_small_param_grid.copy()),\n",
@@ -741,6 +896,9 @@
     "    generate_model_template(\"iris\", \"tabnet\",param_grid = tabnet_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\", \"gate\", param_grid = gate_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"fttransformer\", param_grid = fttransformer_small_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"node\", param_grid = node_small_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"autoint\", param_grid = autoint_small_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"tabtransformer\", param_grid = tabtransformer_small_param_grid.copy()),\n",
     "\n",
     "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
@@ -750,6 +908,8 @@
     "    generate_model_template(\"housing\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "\n",
     "    generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
@@ -758,13 +918,15 @@
     "    generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\",\"node\", param_grid = node_large_param_grid.copy())\n",
+    "    generate_model_template(\"adult\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 135,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -776,14 +938,6 @@
     "with open(\"../configuration/experiment_runs.yml\", \"w\") as f:\n",
     "    yaml.dump(templates, f, sort_keys = False, default_flow_style=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62dbddc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
