--- a/notebooks/ExplorationBook.ipynb
+++ b/notebooks/ExplorationBook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "abd838c3",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "3f0405c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"../output/debug_newmodels.csv\")"
+    "df = pd.read_csv(r\"../output/default_pytorch_tabular_benchmark.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "b9161df4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "9e4f9922",
    "metadata": {},
    "outputs": [
@@ -87,119 +87,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>xgb</td>\n",
-       "      <td>11.338877</td>\n",
-       "      <td>mse</td>\n",
-       "      <td>{'alpha': 0.7605962861221638, 'colsample_bytre...</td>\n",
-       "      <td>{'mse': 0.2127647380723268, 'rmse': 0.46126428...</td>\n",
-       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.212765</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.840350</td>\n",
-       "      <td>0.461264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>mlp</td>\n",
-       "      <td>957.775981</td>\n",
-       "      <td>mse</td>\n",
-       "      <td>{'validation_fraction': 0.15, 'solver': 'lbfgs...</td>\n",
-       "      <td>{'mse': 0.2911525213286936, 'rmse': 0.53958550...</td>\n",
-       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.291153</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.781532</td>\n",
-       "      <td>0.539586</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>s1dcnn</td>\n",
-       "      <td>885.240154</td>\n",
-       "      <td>mse</td>\n",
-       "      <td>{'batch_size': 930, 'early_stopping_patience':...</td>\n",
-       "      <td>{'mse': 0.30259276899484133, 'rmse': 0.5500843...</td>\n",
-       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.302593</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.772947</td>\n",
-       "      <td>0.550084</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>tabnet</td>\n",
-       "      <td>1620.804620</td>\n",
-       "      <td>mse</td>\n",
-       "      <td>{'Adam_weight_decay': 0.00033637394168674177, ...</td>\n",
-       "      <td>{'mse': 0.9491384590261115, 'rmse': 0.97423737...</td>\n",
-       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.949138</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.287807</td>\n",
-       "      <td>0.974237</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   dataset   model     run_time eval_metric  \\\n",
-       "0  housing     xgb    11.338877         mse   \n",
-       "1  housing     mlp   957.775981         mse   \n",
-       "2  housing  s1dcnn   885.240154         mse   \n",
-       "3  housing  tabnet  1620.804620         mse   \n",
-       "\n",
-       "                                         best_params  \\\n",
-       "0  {'alpha': 0.7605962861221638, 'colsample_bytre...   \n",
-       "1  {'validation_fraction': 0.15, 'solver': 'lbfgs...   \n",
-       "2  {'batch_size': 930, 'early_stopping_patience':...   \n",
-       "3  {'Adam_weight_decay': 0.00033637394168674177, ...   \n",
-       "\n",
-       "                                      output_metrics  \\\n",
-       "0  {'mse': 0.2127647380723268, 'rmse': 0.46126428...   \n",
-       "1  {'mse': 0.2911525213286936, 'rmse': 0.53958550...   \n",
-       "2  {'mse': 0.30259276899484133, 'rmse': 0.5500843...   \n",
-       "3  {'mse': 0.9491384590261115, 'rmse': 0.97423737...   \n",
-       "\n",
-       "                                         debug_ytrue    f1       mse accuracy  \\\n",
-       "0  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.212765     None   \n",
-       "1  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.291153     None   \n",
-       "2  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.302593     None   \n",
-       "3  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.949138     None   \n",
-       "\n",
-       "  recall precision   auc area_under_pr  r2_score      rmse  \n",
-       "0   None      None  None          None  0.840350  0.461264  \n",
-       "1   None      None  None          None  0.781532  0.539586  \n",
-       "2   None      None  None          None  0.772947  0.550084  \n",
-       "3   None      None  None          None  0.287807  0.974237  "
+       "Empty DataFrame\n",
+       "Columns: [dataset, model, run_time, eval_metric, best_params, output_metrics, debug_ytrue, f1, mse, accuracy, recall, precision, auc, area_under_pr, r2_score, rmse]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "deb16109",
    "metadata": {},
    "outputs": [
@@ -287,127 +185,63 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>202307-2922-4557-aeef7ab7-4348-4aaa-98d5-97124...</td>\n",
-       "      <td>{'dataset': 'breastcancer', 'model': 'fttransf...</td>\n",
-       "      <td>breastcancer</td>\n",
-       "      <td>fttransformer</td>\n",
-       "      <td>hyperopt</td>\n",
-       "      <td>roc_auc</td>\n",
-       "      <td>{'Adam_lr': 0.0003065503518754533, 'Adam_weigh...</td>\n",
-       "      <td>{'recall': 0.9777777777777777, 'precision': 0....</td>\n",
-       "      <td>./output/modelsaves/breastcancer/fttransformer...</td>\n",
-       "      <td>107.964507</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[1, 0, 1, 1, 0, 1, 1, 1, 1, 0]</td>\n",
-       "      <td>0.977778</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.972028</td>\n",
-       "      <td>0.977778</td>\n",
-       "      <td>0.977778</td>\n",
-       "      <td>0.998532</td>\n",
-       "      <td>0.970035</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>202307-2920-4202-2d0ceba3-3cc1-49a0-b504-cea64...</td>\n",
-       "      <td>{'dataset': 'iris', 'model': 'xgb', 'best_para...</td>\n",
-       "      <td>iris</td>\n",
-       "      <td>xgb</td>\n",
-       "      <td>hyperopt</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'alpha': 0.7605962861221638, 'colsample_bytre...</td>\n",
-       "      <td>{'accuracy': 0.9736842105263158, 'f1': 0.97368...</td>\n",
-       "      <td>./output/modelsaves/iris/xgb/202307-2920-4202-...</td>\n",
-       "      <td>1.348606</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[2, 0, 2, 1, 2, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.973684</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.973684</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>202307-2921-1224-13f12be4-9f63-40bf-a0c1-04ce3...</td>\n",
-       "      <td>{'dataset': 'titanic', 'model': 'gate', 'best_...</td>\n",
+       "      <td>202308-0918-0955-9db8ad13-8c88-4b45-8a33-58435...</td>\n",
+       "      <td>{'dataset': 'titanic', 'model': 'tabnet', 'bes...</td>\n",
        "      <td>titanic</td>\n",
-       "      <td>gate</td>\n",
+       "      <td>tabnet</td>\n",
        "      <td>hyperopt</td>\n",
        "      <td>accuracy</td>\n",
-       "      <td>{'Adam_lr': 0.001, 'Adam_weight_decay': 0.0001...</td>\n",
-       "      <td>{'recall': 0.7093023255813954, 'precision': 0....</td>\n",
-       "      <td>./output/modelsaves/titanic/gate/202307-2921-1...</td>\n",
-       "      <td>4265.136805</td>\n",
+       "      <td>{'Adam_weight_decay': 0.0008344870704054452, '...</td>\n",
+       "      <td>{'recall': 0.7558139534883721, 'precision': 0....</td>\n",
+       "      <td>./output/modelsaves/titanic/tabnet/202308-0918...</td>\n",
+       "      <td>96.496373</td>\n",
        "      <td>...</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.753086</td>\n",
+       "      <td>0.613208</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.820628</td>\n",
-       "      <td>0.709302</td>\n",
-       "      <td>0.802632</td>\n",
-       "      <td>0.851638</td>\n",
-       "      <td>0.681416</td>\n",
+       "      <td>0.632287</td>\n",
+       "      <td>0.755814</td>\n",
+       "      <td>0.515873</td>\n",
+       "      <td>0.702682</td>\n",
+       "      <td>0.484074</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 21 columns</p>\n",
+       "<p>1 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               run_id  \\\n",
-       "17  202307-2922-4557-aeef7ab7-4348-4aaa-98d5-97124...   \n",
-       "0   202307-2920-4202-2d0ceba3-3cc1-49a0-b504-cea64...   \n",
-       "11  202307-2921-1224-13f12be4-9f63-40bf-a0c1-04ce3...   \n",
+       "                                              run_id  \\\n",
+       "0  202308-0918-0955-9db8ad13-8c88-4b45-8a33-58435...   \n",
        "\n",
-       "                                           run_config       dataset  \\\n",
-       "17  {'dataset': 'breastcancer', 'model': 'fttransf...  breastcancer   \n",
-       "0   {'dataset': 'iris', 'model': 'xgb', 'best_para...          iris   \n",
-       "11  {'dataset': 'titanic', 'model': 'gate', 'best_...       titanic   \n",
+       "                                          run_config  dataset   model  \\\n",
+       "0  {'dataset': 'titanic', 'model': 'tabnet', 'bes...  titanic  tabnet   \n",
        "\n",
-       "            model execution_mode eval_metric  \\\n",
-       "17  fttransformer       hyperopt     roc_auc   \n",
-       "0             xgb       hyperopt    accuracy   \n",
-       "11           gate       hyperopt    accuracy   \n",
+       "  execution_mode eval_metric  \\\n",
+       "0       hyperopt    accuracy   \n",
        "\n",
-       "                                          best_params  \\\n",
-       "17  {'Adam_lr': 0.0003065503518754533, 'Adam_weigh...   \n",
-       "0   {'alpha': 0.7605962861221638, 'colsample_bytre...   \n",
-       "11  {'Adam_lr': 0.001, 'Adam_weight_decay': 0.0001...   \n",
+       "                                         best_params  \\\n",
+       "0  {'Adam_weight_decay': 0.0008344870704054452, '...   \n",
        "\n",
-       "                                       output_metrics  \\\n",
-       "17  {'recall': 0.9777777777777777, 'precision': 0....   \n",
-       "0   {'accuracy': 0.9736842105263158, 'f1': 0.97368...   \n",
-       "11  {'recall': 0.7093023255813954, 'precision': 0....   \n",
+       "                                      output_metrics  \\\n",
+       "0  {'recall': 0.7558139534883721, 'precision': 0....   \n",
        "\n",
-       "                                     saved_model_path     run_time  ...  \\\n",
-       "17  ./output/modelsaves/breastcancer/fttransformer...   107.964507  ...   \n",
-       "0   ./output/modelsaves/iris/xgb/202307-2920-4202-...     1.348606  ...   \n",
-       "11  ./output/modelsaves/titanic/gate/202307-2921-1...  4265.136805  ...   \n",
+       "                                    saved_model_path   run_time  ...  \\\n",
+       "0  ./output/modelsaves/titanic/tabnet/202308-0918...  96.496373  ...   \n",
        "\n",
-       "                       debug_ytrue        f1   mse  accuracy    recall  \\\n",
-       "17  [1, 0, 1, 1, 0, 1, 1, 1, 1, 0]  0.977778  None  0.972028  0.977778   \n",
-       "0   [2, 0, 2, 1, 2, 0, 0, 0, 0, 1]  0.973684  None  0.973684       NaN   \n",
-       "11  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.753086  None  0.820628  0.709302   \n",
+       "                      debug_ytrue        f1   mse  accuracy    recall  \\\n",
+       "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.613208  None  0.632287  0.755814   \n",
        "\n",
-       "    precision       auc  area_under_pr  r2_score  rmse  \n",
-       "17   0.977778  0.998532       0.970035      None  None  \n",
-       "0         NaN       NaN            NaN      None  None  \n",
-       "11   0.802632  0.851638       0.681416      None  None  \n",
+       "   precision       auc  area_under_pr  r2_score  rmse  \n",
+       "0   0.515873  0.702682       0.484074      None  None  \n",
        "\n",
-       "[3 rows x 21 columns]"
+       "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,17 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c4148ed3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"{'Adam_lr': 0.0003065503518754533, 'Adam_weight_decay': 0.0018527915294425184, 'ReduceLROnPlateau_factor': 0.15703250402891672, 'ReduceLROnPlateau_patience': 8, 'add_norm_dropout': 0.09255893395156861, 'attn_dropout': 0.11435052748496637, 'attn_feature_importance': False, 'batch_norm_continuous_input': False, 'batch_size': 128, 'early_stopping_patience': 6, 'embedding_bias': False, 'embedding_dropout': 0.10273940427370434, 'embedding_initialization': 'kaiming_uniform', 'ff_dropout': 0.13034522714427235, 'ff_hidden_multiplier': 4, 'input_embed_dim': 53, 'learning_rate': 0.0013483741168452425, 'num_attn_blocks': 7, 'num_heads': 9, 'optimizer_fn': <class 'torch.optim.adam.Adam'>, 'scheduler_fn': 'ReduceLROnPlateau', 'share_embedding': True, 'share_embedding_strategy': 'add', 'shared_embedding_fraction': 0.32653028909847637, 'transformer_activation': 'ReLU', 'transformer_head_dim': 72, 'outer_params': {'max_epochs': 300, 'early_stopping_tolerance': 1e-06, 'hyperopt_evals': 10, 'val_size': 0.2, 'auto_lr_find': False}, 'optimizer_params': {'weight_decay': 0.0018527915294425184}, 'scheduler_params': {'factor': 0.15703250402891672, 'patience': 8, 'min_lr': 1e-07, 'verbose': True, 'mode': 'min'}}\""
+       "\"{'Adam_weight_decay': 0.0008344870704054452, 'ReduceLROnPlateau_factor': 0.39054754693784877, 'ReduceLROnPlateau_patience': 9, 'batch_size': 64, 'cat_emb_dim': 3, 'clip_value': 2, 'early_stopping_patience': 5, 'gamma': 1.1112005798198572, 'lambda_sparse': 0.0018702554034918367, 'learning_rate': 0.00023539065760010136, 'mask_type': 'entmax', 'momentum': 0.002024407113236184, 'n_d': 11, 'n_independent': 2, 'n_shared': 3, 'n_steps': 6, 'optimizer_fn': <class 'torch.optim.adam.Adam'>, 'scheduler_fn': 'ReduceLROnPlateau', 'virtual_batch_size_ratio': 0.5, 'weights': 1, 'outer_params': {'max_epochs': 1000, 'early_stopping_tolerance': 1e-06, 'hyperopt_evals': 10, 'val_size': 0.2, 'auto_lr_find': False}, 'virtual_batch_size': 32, 'optimizer_params': {'weight_decay': 0.0008344870704054452}, 'scheduler_params': {'factor': 0.39054754693784877, 'patience': 9, 'min_lr': 1e-07, 'verbose': True, 'mode': 'min'}, 'n_a': 11}\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
