--- a/notebooks/ExplorationBook-Copy1.ipynb
+++ b/notebooks/ExplorationBook-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "abd838c3",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "3f0405c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"../output/debug_newmodels_noretrain.csv\")"
+    "df = pd.read_csv(r\"../output/default_pytorch_tabular_benchmark_noretrain.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "b9161df4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "9e4f9922",
    "metadata": {},
    "outputs": [
@@ -88,80 +88,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>xgb</td>\n",
-       "      <td>hyperopt</td>\n",
-       "      <td>mse</td>\n",
-       "      <td>{'alpha': 0.7605962861221638, 'colsample_bytre...</td>\n",
-       "      <td>{'mse': 0.22065056597371746, 'rmse': 0.4697345...</td>\n",
-       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.220651</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.834433</td>\n",
-       "      <td>0.469735</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>mlp</td>\n",
-       "      <td>cv</td>\n",
-       "      <td>mse</td>\n",
-       "      <td>{'validation_fraction': 0.15, 'solver': 'lbfgs...</td>\n",
-       "      <td>{'mse': 0.2547037413374874, 'rmse': 0.50468182...</td>\n",
-       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.254704</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.808881</td>\n",
-       "      <td>0.504682</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>s1dcnn</td>\n",
-       "      <td>hyperopt</td>\n",
-       "      <td>mse</td>\n",
-       "      <td>{'batch_size': 930, 'early_stopping_patience':...</td>\n",
-       "      <td>{'mse': 0.30651763152996203, 'rmse': 0.5536403...</td>\n",
-       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.306518</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.770002</td>\n",
-       "      <td>0.553640</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>7</th>\n",
        "      <td>housing</td>\n",
        "      <td>tabnet</td>\n",
        "      <td>hyperopt</td>\n",
        "      <td>mse</td>\n",
-       "      <td>{'Adam_weight_decay': 0.00033637394168674177, ...</td>\n",
-       "      <td>{'mse': 0.9491384590261115, 'rmse': 0.97423737...</td>\n",
+       "      <td>{'Adam_weight_decay': 0.000157702512840002, 'R...</td>\n",
+       "      <td>{'mse': 227.6794889889087, 'rmse': 15.08905195...</td>\n",
        "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.949138</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.287807</td>\n",
-       "      <td>0.974237</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>227.679489</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-169.840903</td>\n",
+       "      <td>15.089052</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -169,37 +112,22 @@
       ],
       "text/plain": [
        "   dataset   model execution_mode eval_metric  \\\n",
-       "0  housing     xgb       hyperopt         mse   \n",
-       "1  housing     mlp             cv         mse   \n",
-       "2  housing  s1dcnn       hyperopt         mse   \n",
-       "3  housing  tabnet       hyperopt         mse   \n",
+       "7  housing  tabnet       hyperopt         mse   \n",
        "\n",
        "                                         best_params  \\\n",
-       "0  {'alpha': 0.7605962861221638, 'colsample_bytre...   \n",
-       "1  {'validation_fraction': 0.15, 'solver': 'lbfgs...   \n",
-       "2  {'batch_size': 930, 'early_stopping_patience':...   \n",
-       "3  {'Adam_weight_decay': 0.00033637394168674177, ...   \n",
+       "7  {'Adam_weight_decay': 0.000157702512840002, 'R...   \n",
        "\n",
        "                                      output_metrics  \\\n",
-       "0  {'mse': 0.22065056597371746, 'rmse': 0.4697345...   \n",
-       "1  {'mse': 0.2547037413374874, 'rmse': 0.50468182...   \n",
-       "2  {'mse': 0.30651763152996203, 'rmse': 0.5536403...   \n",
-       "3  {'mse': 0.9491384590261115, 'rmse': 0.97423737...   \n",
+       "7  {'mse': 227.6794889889087, 'rmse': 15.08905195...   \n",
        "\n",
-       "                                         debug_ytrue    f1       mse accuracy  \\\n",
-       "0  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.220651     None   \n",
-       "1  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.254704     None   \n",
-       "2  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.306518     None   \n",
-       "3  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.949138     None   \n",
+       "                                         debug_ytrue  f1         mse  \\\n",
+       "7  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3... NaN  227.679489   \n",
        "\n",
-       "  recall precision   auc area_under_pr  r2_score      rmse  \n",
-       "0   None      None  None          None  0.834433  0.469735  \n",
-       "1   None      None  None          None  0.808881  0.504682  \n",
-       "2   None      None  None          None  0.770002  0.553640  \n",
-       "3   None      None  None          None  0.287807  0.974237  "
+       "   accuracy  recall  precision  auc  area_under_pr    r2_score       rmse  \n",
+       "7       NaN     NaN        NaN  NaN            NaN -169.840903  15.089052  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "19d47e8e",
    "metadata": {},
    "outputs": [],
