--- a/notebooks/ExplorationBook.ipynb
+++ b/notebooks/ExplorationBook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "abd838c3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "3f0405c2",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "b9161df4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "9e4f9922",
    "metadata": {},
    "outputs": [
@@ -87,17 +87,47 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>tabnet</td>\n",
+       "      <td>516.128497</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'Adam_weight_decay': 0.000157702512840002, 'R...</td>\n",
+       "      <td>{'mse': 227.6794889889087, 'rmse': 15.08905195...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>227.679489</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-169.840903</td>\n",
+       "      <td>15.089052</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [dataset, model, run_time, eval_metric, best_params, output_metrics, debug_ytrue, f1, mse, accuracy, recall, precision, auc, area_under_pr, r2_score, rmse]\n",
-       "Index: []"
+       "   dataset   model    run_time eval_metric  \\\n",
+       "7  housing  tabnet  516.128497         mse   \n",
+       "\n",
+       "                                         best_params  \\\n",
+       "7  {'Adam_weight_decay': 0.000157702512840002, 'R...   \n",
+       "\n",
+       "                                      output_metrics  \\\n",
+       "7  {'mse': 227.6794889889087, 'rmse': 15.08905195...   \n",
+       "\n",
+       "                                         debug_ytrue  f1         mse  \\\n",
+       "7  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3... NaN  227.679489   \n",
+       "\n",
+       "   accuracy  recall  precision  auc  area_under_pr    r2_score       rmse  \n",
+       "7       NaN     NaN        NaN  NaN            NaN -169.840903  15.089052  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,149 +161,6 @@
     "       'recall', 'precision', 'auc', 'area_under_pr', 'r2_score', 'rmse']\n",
     "\n",
     "max_rows[sel_cols].head(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "deb16109",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>run_id</th>\n",
-       "      <th>run_config</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>model</th>\n",
-       "      <th>execution_mode</th>\n",
-       "      <th>eval_metric</th>\n",
-       "      <th>best_params</th>\n",
-       "      <th>output_metrics</th>\n",
-       "      <th>saved_model_path</th>\n",
-       "      <th>run_time</th>\n",
-       "      <th>...</th>\n",
-       "      <th>debug_ytrue</th>\n",
-       "      <th>f1</th>\n",
-       "      <th>mse</th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>recall</th>\n",
-       "      <th>precision</th>\n",
-       "      <th>auc</th>\n",
-       "      <th>area_under_pr</th>\n",
-       "      <th>r2_score</th>\n",
-       "      <th>rmse</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>202308-0918-0955-9db8ad13-8c88-4b45-8a33-58435...</td>\n",
-       "      <td>{'dataset': 'titanic', 'model': 'tabnet', 'bes...</td>\n",
-       "      <td>titanic</td>\n",
-       "      <td>tabnet</td>\n",
-       "      <td>hyperopt</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'Adam_weight_decay': 0.0008344870704054452, '...</td>\n",
-       "      <td>{'recall': 0.7558139534883721, 'precision': 0....</td>\n",
-       "      <td>./output/modelsaves/titanic/tabnet/202308-0918...</td>\n",
-       "      <td>96.496373</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.613208</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.632287</td>\n",
-       "      <td>0.755814</td>\n",
-       "      <td>0.515873</td>\n",
-       "      <td>0.702682</td>\n",
-       "      <td>0.484074</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              run_id  \\\n",
-       "0  202308-0918-0955-9db8ad13-8c88-4b45-8a33-58435...   \n",
-       "\n",
-       "                                          run_config  dataset   model  \\\n",
-       "0  {'dataset': 'titanic', 'model': 'tabnet', 'bes...  titanic  tabnet   \n",
-       "\n",
-       "  execution_mode eval_metric  \\\n",
-       "0       hyperopt    accuracy   \n",
-       "\n",
-       "                                         best_params  \\\n",
-       "0  {'Adam_weight_decay': 0.0008344870704054452, '...   \n",
-       "\n",
-       "                                      output_metrics  \\\n",
-       "0  {'recall': 0.7558139534883721, 'precision': 0....   \n",
-       "\n",
-       "                                    saved_model_path   run_time  ...  \\\n",
-       "0  ./output/modelsaves/titanic/tabnet/202308-0918...  96.496373  ...   \n",
-       "\n",
-       "                      debug_ytrue        f1   mse  accuracy    recall  \\\n",
-       "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]  0.613208  None  0.632287  0.755814   \n",
-       "\n",
-       "   precision       auc  area_under_pr  r2_score  rmse  \n",
-       "0   0.515873  0.702682       0.484074      None  None  \n",
-       "\n",
-       "[1 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Specify the metric you want to maximize\n",
-    "metric_to_maximize = 'f1'\n",
-    "tomax = {\"f1\": True,\n",
-    "         \"mse\": False,\n",
-    "         \"accuracy\": True,\n",
-    "         \"recall\": True,\n",
-    "         \"precision\": True,\n",
-    "         \"auc\": True,\n",
-    "         \"area_under_pr\": True,\n",
-    "        \"rmse\": False,\n",
-    "        \"r2_score\": True}\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Filter out rows with NaN values in the specified metric column\n",
-    "filtered_df = dataset.dropna(subset=[metric_to_maximize]).loc[dataset[metric_to_maximize] != \"nan\"]\n",
-    "\n",
-    "# Find the rows that maximize the specified metric for each dataset\n",
-    "if  tomax[metric_to_maximize]:\n",
-    "    max_rows = filtered_df.groupby('dataset')[metric_to_maximize].idxmax()\n",
-    "else:\n",
-    "    max_rows = filtered_df.groupby('dataset')[metric_to_maximize].idxmin()\n",
-    "    \n",
-    "# Retrieve the rows that maximize the metric\n",
-    "maximized_rows = filtered_df.loc[max_rows]\n",
-    "\n",
-    "maximized_rows"
    ]
   },
   {
